fix portrait clipping on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     max-width: 20em;
     margin: 0 auto;
     border-radius: 100%;
+    margin-top: 6em;
 }
 
 .top-nav-collapse {
